With clone code

--- a/train.ipynb
+++ b/train.ipynb
@@ -13,6 +13,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Clone the repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/achyutkneupane/deep-text-recognition-benchmark.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd deep-text-recognition-benchmark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installation\n",
     "\n",
     "Install the required packages using the following command:"
