--- a/train.ipynb
+++ b/train.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd deep-text-recognition-benchmark"
+    "%cd deep-text-recognition-benchmark"
    ]
   },
   {
