With saving pth file to google drive

--- a/train.ipynb
+++ b/train.ipynb
@@ -38,6 +38,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Connect with the Google Drive to save the trained model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive', force_remount=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installation\n",
     "\n",
     "Install the required packages using the following command:"
