--- a/train.ipynb
+++ b/train.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python train.py --train_data train_lmdb --valid_data val_lmdb --select_data \"/\" --batch_ratio 1.0 --Transformation TPS --FeatureExtraction ResNet --SequenceModeling BiLSTM --Prediction Attn --saved_model models/TPS-ResNet-BiLSTM-Attn.pth --data_filtering_off --batch_max_length 80 --workers 0"
+    "!python train.py --train_data train_lmdb --valid_data val_lmdb --select_data \"/\"-\"/\" --batch_ratio 5500-483 --Transformation TPS --FeatureExtraction ResNet --SequenceModeling BiLSTM --Prediction Attn --saved_model models/TPS-ResNet-BiLSTM-Attn.pth --batch_size 2 --data_filtering_off --workers 0 --batch_max_length 80 --num_iter 10 --valInterval 5 --FT"
    ]
   }
  ],
