With TQDM progressbar

--- a/train.ipynb
+++ b/train.ipynb
@@ -142,7 +142,7 @@
    "source": [
     "import gdown\n",
     "\n",
-    "file_id=\"1b59rXuGGmKne1AuHnkgDzoYgKeETNMv9\"\n",
+    "file_id=\"1ajONZOgiG9pEYsQ-eBmgkVbMDuHgPCaY\"\n",
     "output=\"TPS-ResNet-BiLSTM-Attn.pth\"\n",
     "\n",
     "gdown.download(id=file_id, output=output)"
@@ -169,11 +169,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "dataset_root: train_lmdb\n",
+      "opt.select_data: ['/']\n",
+      "opt.batch_ratio: ['1.0']\n",
+      "--------------------------------------------------------------------------------\n",
+      "dataset_root:    train_lmdb\t dataset: /\n",
+      "sub-directory:\t/.\t num samples: 5500\n",
+      "num total samples of /: 5500 x 1.0 (total_data_usage_ratio) = 5500\n",
+      "num samples of / per batch: 8 x 1.0 (batch_ratio) = 8\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/achyutkneupane/python/kec/ocr/new-trainer/deep-text-recognition-benchmark/train.py\", line 358, in <module>\n",
+      "    train(opt)\n",
+      "  File \"/Users/achyutkneupane/python/kec/ocr/new-trainer/deep-text-recognition-benchmark/train.py\", line 49, in train\n",
+      "    train_dataset = Batch_Balanced_Dataset(opt)\n",
+      "  File \"/Users/achyutkneupane/python/kec/ocr/new-trainer/deep-text-recognition-benchmark/dataset.py\", line 69, in __init__\n",
+      "    self.dataloader_iter_list.append(iter(_data_loader))\n",
+      "  File \"/Users/achyutkneupane/python/kec/ocr/new-trainer/deep-text-recognition-benchmark/venv/lib/python3.9/site-packages/torch/utils/data/dataloader.py\", line 440, in __iter__\n",
+      "    return self._get_iterator()\n",
+      "  File \"/Users/achyutkneupane/python/kec/ocr/new-trainer/deep-text-recognition-benchmark/venv/lib/python3.9/site-packages/torch/utils/data/dataloader.py\", line 388, in _get_iterator\n",
+      "    return _MultiProcessingDataLoaderIter(self)\n",
+      "  File \"/Users/achyutkneupane/python/kec/ocr/new-trainer/deep-text-recognition-benchmark/venv/lib/python3.9/site-packages/torch/utils/data/dataloader.py\", line 1038, in __init__\n",
+      "    w.start()\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/process.py\", line 121, in start\n",
+      "    self._popen = self._Popen(self)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/context.py\", line 224, in _Popen\n",
+      "    return _default_context.get_context().Process._Popen(process_obj)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/context.py\", line 284, in _Popen\n",
+      "    return Popen(process_obj)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/popen_spawn_posix.py\", line 32, in __init__\n",
+      "    super().__init__(process_obj)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/popen_fork.py\", line 19, in __init__\n",
+      "    self._launch(process_obj)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/popen_spawn_posix.py\", line 47, in _launch\n",
+      "    reduction.dump(process_obj, fp)\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/multiprocessing/reduction.py\", line 60, in dump\n",
+      "    ForkingPickler(file, protocol).dump(obj)\n",
+      "TypeError: cannot pickle 'Environment' object\n"
+     ]
+    }
+   ],
    "source": [
-    "!python train.py --train_data train_lmdb --valid_data val_lmdb --select_data \"/\"-\"/\" --batch_ratio 5500-483 --Transformation TPS --FeatureExtraction ResNet --SequenceModeling BiLSTM --Prediction Attn --saved_model models/TPS-ResNet-BiLSTM-Attn.pth --batch_size 2 --data_filtering_off --workers 0 --batch_max_length 80 --num_iter 10 --valInterval 5 --FT"
+    "!python train.py --train_data train_lmdb --valid_data val_lmdb --select_data \"/\" --batch_ratio 1.0 --Transformation TPS --FeatureExtraction ResNet --SequenceModeling BiLSTM --Prediction Attn --saved_model models/TPS-ResNet-BiLSTM-Attn.pth --batch_size 8 --data_filtering_off --workers 4 --batch_max_length 80 --num_iter 10 --valInterval 5 --FT --sensitive"
    ]
   }
  ],
